# SupermarketReceipt-Refactoring-Kata

cpp/: CMakeLists.txt  build.sh
cpp/test/: FakeCatalog.h
cpp/test/basic/: CMakeLists.txt  Readme.md  SuperMarketTest.cpp  main.cpp  weasel_types.hpp
cpp/test/original/: CMakeLists.txt  SuperMarketTest.cpp
